# C_Hangman

./: CMakeLists.txt
dependencies/GLAD/include/glad/: glad.h
dependencies/GLAD/src/: glad.c
src/: hangman.cpp  hangman.hpp  main.cpp  words.txt
